--- a/public/publication_types/index.html
+++ b/public/publication_types/index.html
@@ -623,7 +623,7 @@
     <div class="order-0 h-100">
       
       <a class="navbar-brand" href="/" title="Hugo Academic CV Theme">
-        Your Name
+        Ruben&#39;s Personal Website
       </a>
     </div>
     
@@ -898,7 +898,7 @@
 
   
   <p class="powered-by text-center">
-    © 2025 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2025 Ruben van Gemeren
   </p>
   
 
