Add custom footer thanking creator of Hugo blox

--- a/public/404.html
+++ b/public/404.html
@@ -766,7 +766,11 @@
 </div>
     </div>
     <div class="page-footer">
-      
+      <footer></footer>
+    <small>
+        This website was possible due to the amazing work done by <a href="https://github.com/gcushen">https://github.com/gcushen</a> and the Hugo blox project, thank you :)
+    </small>
+</footer>
     </div>
 
     
