--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -1129,7 +1129,11 @@
 
     </div>
     <div class="page-footer">
-      
+      <footer></footer>
+    <small>
+        This website was possible due to the amazing work done by <a href="https://github.com/gcushen">https://github.com/gcushen</a> and the Hugo blox project, thank you :)
+    </small>
+</footer>
     </div>
 
     
