--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -1131,7 +1131,7 @@
     <div class="page-footer">
       <footer></footer>
     <small>
-        This website was possible due to the amazing work done by <a href="https://github.com/gcushen">https://github.com/gcushen</a> and the Hugo blox project, thank you :)
+        This website was made possible due to the amazing work done by <a href="https://github.com/gcushen">gcushen</a> and the Hugo blox project, thank you :)
     </small>
 </footer>
     </div>
